more image testing

--- a/_posts/2021-09-01-TWI-Base.md
+++ b/_posts/2021-09-01-TWI-Base.md
@@ -5,4 +5,4 @@ title: Twitter Face Filter Bot Overview
 
 The Twitter Face Filter Bot is a project I decided to undertake the summer of 2021. Its main purpose is to retrieve media from a tweet which mentions the page shown below. When media is retrieved the bot then uses machine learning to place a filter over the face of people in the image currently it places a batman mask over the face of the person in the image.
 
-![Twitter Page](img/TWI-page-view.png)
+![Twitter Page](https://user-images.githubusercontent.com/71035239/131861545-36a9ee60-3eba-4fb0-ad70-56d3ee9b73d4.png)
