Full Post No.1 /w PlaceHolder

--- a/_posts/2021-09-01-TWI-Base.md
+++ b/_posts/2021-09-01-TWI-Base.md
@@ -3,6 +3,33 @@ layout: post
 title: Twitter Face Filter Bot Overview
 ---
 
-The Twitter Face Filter Bot is a project I decided to undertake the summer of 2021. Its main purpose is to retrieve media from a tweet which mentions the page shown below. When media is retrieved the bot then uses machine learning to place a filter over the face of people in the image currently it places a batman mask over the face of the person in the image.
+<h3>Basic  Overview</h3>
+The Twitter Face Filter Bot is a project I decided to undertake the summer of 2021. Its main purpose is to retrieve media from a tweet which mentions the page shown below. When media is retrieved the bot then uses machine learning to place a filter over the face of people in the image currently it places a batman mask over the face of the person in the image. It has two major components, a REST API System, written in Java using Twitter4J and SpringBoot libraries and a Machine Learning System used to apply the filter to the image, written in python using OpenCV and MediaPipe.
+
+---
 
 ![Twitter Page](https://user-images.githubusercontent.com/71035239/131861545-36a9ee60-3eba-4fb0-ad70-56d3ee9b73d4.png)
+
+
+---
+
+<h3>Example of Bot's Work</h3>
+
+
+<ol>
+<li>Tweet mentioning bot is posted on twitter.
+
+![Example Tweet](https://user-images.githubusercontent.com/71035239/131864262-58adb9e3-3790-4bfe-8a94-53797c706b40.PNG)
+</li>
+
+<li>Bot REST API System returns most recent tweet including '@FaceFilterBot' in JSON format. When the bot makes a GET request to the REST API.
+
+![Example Tweet](https://user-images.githubusercontent.com/71035239/131865199-a1b9c082-5663-4db7-9bfc-b26eb7b12cc9.PNG)
+</li>
+
+<li>Bot then retrieves the media in the tweet and applies the filter to it using OpenCV and MediaPipe libraries in Python. If the media is a Photo it simply applies the filter to it, using the machine learning methods that will be discussed further in the post on a later Bot Filter System Post.
+
+![Final Product](https://user-images.githubusercontent.com/71035239/131867485-2a579534-3604-473c-8434-5c9c68584c82.png)
+</li>
+
+</ol>
