--- a/_posts/2021-09-01-TWI-Base.md
+++ b/_posts/2021-09-01-TWI-Base.md
@@ -10,24 +10,18 @@ The Twitter Face Filter Bot is a project I decided to undertake the summer of 20
 
 ![Twitter Page](https://user-images.githubusercontent.com/71035239/131861545-36a9ee60-3eba-4fb0-ad70-56d3ee9b73d4.png)
 
-
 ---
 
 <h3>Example of Bot's Work</h3>
 
 
-<ol>
-<li>Tweet mentioning bot is posted on twitter.</li>
-
+1. Tweet mentioning bot is posted on twitter.
 ![Example Tweet](https://user-images.githubusercontent.com/71035239/131864262-58adb9e3-3790-4bfe-8a94-53797c706b40.PNG)
 
-<li>Bot REST API System returns most recent tweet including '@FaceFilterBot' in JSON format. When the bot makes a GET request to the REST API.
-</li>
-
+2. Bot REST API System returns most recent tweet including '@FaceFilterBot' in JSON format. When the bot makes a GET request to the REST API.
 ![Example Tweet](https://user-images.githubusercontent.com/71035239/131865199-a1b9c082-5663-4db7-9bfc-b26eb7b12cc9.PNG)
 
-<li>Bot then retrieves the media in the tweet and applies the filter to it using OpenCV and MediaPipe libraries in Python. If the media is a Photo it simply applies the filter to it, using the machine learning methods that will be discussed further in the post on a later Bot Filter System Post.
-</li>
+3. Bot then retrieves the media in the tweet and applies the filter to it using OpenCV and MediaPipe libraries in Python. If the media is a Photo it simply applies the filter to it, using the machine learning methods that will be discussed further in the post on a later Bot Filter System Post. [Placeholder Temp]
 
 ![Final Product](https://user-images.githubusercontent.com/71035239/131867485-2a579534-3604-473c-8434-5c9c68584c82.png)
-</ol>
+---
