--- a/_posts/2021-09-01-TWI-Base.md
+++ b/_posts/2021-09-01-TWI-Base.md
@@ -4,7 +4,7 @@ title: Twitter Face Filter Bot Overview
 ---
 
 <h3>Basic  Overview</h3>
-The Twitter Face Filter Bot is a project I decided to undertake the summer of 2021. Its main purpose is to retrieve media from a tweet which mentions the page shown below. When media is retrieved the bot then uses machine learning to place a filter over the face of people in the image currently it places a batman mask over the face of the person in the image. It has two major components, a REST API System, written in Java using Twitter4J and SpringBoot libraries and a Machine Learning System used to apply the filter to the image, written in python using OpenCV and MediaPipe.
+The Twitter Face Filter Bot is a project I decided to undertake in the summer of code program hosted by Mohamed Amine Belabbes during the summer between my first and second year of University in 2021. Its main purpose is to retrieve media from a tweet which mentions the page shown below. When media is retrieved the bot then uses machine learning to place a filter over the face of people in the image currently it places a batman mask over the face of the person in the image. It has two major components, a REST API System, written in Java using Twitter4J and SpringBoot libraries and a Machine Learning System used to apply the filter to the image, written in python using OpenCV and MediaPipe.
 
 ---
 
